# lab5

./: pyproject.toml
prog/: dataind.json  ind.py  ind2.py  pyproject.toml
